practica/cl/ConvexPolygonParser.py
# Generated from ConvexPolygon.g4 by ANTLR 4.9
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ConvexPolygonParser(Parser):
    grammarFileName = "ConvexPolygon.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = ["<INVALID>", "'['", "']'", "'color '", "'{'", "'}'",
                    "'print '", "'area '", "'perimeter '", "'vertices '",
                    "'centroid '", "'inside '", "'equal '", "'draw '",
                    "'\"'", "'('", "')'", "' * '", "' + '", "'#'", "'!'",
                    "<INVALID>", "':='", "<INVALID>", "','", "' '"]

    symbolicNames = ["<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                     "<INVALID>", "REAL", "EQUAL", "ID", "COMA", "SPACE",
                     "FILENAME", "TEXT", "CONTENT"]

    RULE_root = 0
    RULE_vertex = 1
    RULE_convexpolygon = 2
    RULE_asignment = 3
    RULE_color = 4
    RULE_rgb = 5
    RULE_myprint = 6
    RULE_area = 7
    RULE_perimeter = 8
    RULE_vertices = 9
    RULE_centroid = 10
    RULE_inside = 11
    RULE_equal = 12
    RULE_draw = 13
    RULE_operator = 14

    ruleNames = ["root", "vertex", "convexpolygon", "asignment", "color",
                 "rgb", "myprint", "area", "perimeter", "vertices", "centroid",
                 "inside", "equal", "draw", "operator"]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    REAL = 21
    EQUAL = 22
    ID = 23
    COMA = 24
    SPACE = 25
    FILENAME = 26
    TEXT = 27
    CONTENT = 28

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None

    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ConvexPolygonParser.EOF, 0)

        def asignment(self):
            return self.getTypedRuleContext(ConvexPolygonParser.AsignmentContext, 0)

        def color(self):
            return self.getTypedRuleContext(ConvexPolygonParser.ColorContext, 0)

        def myprint(self):
            return self.getTypedRuleContext(ConvexPolygonParser.MyprintContext, 0)

        def area(self):
            return self.getTypedRuleContext(ConvexPolygonParser.AreaContext, 0)

        def perimeter(self):
            return self.getTypedRuleContext(ConvexPolygonParser.PerimeterContext, 0)

        def vertices(self):
            return self.getTypedRuleContext(ConvexPolygonParser.VerticesContext, 0)

        def centroid(self):
            return self.getTypedRuleContext(ConvexPolygonParser.CentroidContext, 0)

        def inside(self):
            return self.getTypedRuleContext(ConvexPolygonParser.InsideContext, 0)

        def equal(self):
            return self.getTypedRuleContext(ConvexPolygonParser.EqualContext, 0)

        def draw(self):
            return self.getTypedRuleContext(ConvexPolygonParser.DrawContext, 0)

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_root

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRoot"):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)

    def root(self):

        localctx = ConvexPolygonParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 30
                self.asignment()
                pass

            elif la_ == 2:
                self.state = 31
                self.color()
                pass

            elif la_ == 3:
                self.state = 32
                self.myprint()
                pass

            elif la_ == 4:
                self.state = 33
                self.area()
                pass

            elif la_ == 5:
                self.state = 34
                self.perimeter()
                pass

            elif la_ == 6:
                self.state = 35
                self.vertices()
                pass

            elif la_ == 7:
                self.state = 36
                self.centroid()
                pass

            elif la_ == 8:
                self.state = 37
                self.inside()
                pass

            elif la_ == 9:
                self.state = 38
                self.equal()
                pass

            elif la_ == 10:
                self.state = 39
                self.draw()
                pass

            elif la_ == 11:
                self.state = 40
                self.operator(0)
                pass

            self.state = 43
            self.match(ConvexPolygonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VertexContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.REAL)
            else:
                return self.getToken(ConvexPolygonParser.REAL, i)

        def SPACE(self):
            return self.getToken(ConvexPolygonParser.SPACE, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_vertex

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVertex"):
                return visitor.visitVertex(self)
            else:
                return visitor.visitChildren(self)

    def vertex(self):

        localctx = ConvexPolygonParser.VertexContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vertex)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(ConvexPolygonParser.REAL)
            self.state = 46
            self.match(ConvexPolygonParser.SPACE)
            self.state = 47
            self.match(ConvexPolygonParser.REAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConvexpolygonContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vertex(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ConvexPolygonParser.VertexContext)
            else:
                return self.getTypedRuleContext(ConvexPolygonParser.VertexContext, i)

        def SPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.SPACE)
            else:
                return self.getToken(ConvexPolygonParser.SPACE, i)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_convexpolygon

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConvexpolygon"):
                return visitor.visitConvexpolygon(self)
            else:
                return visitor.visitChildren(self)

    def convexpolygon(self):

        localctx = ConvexPolygonParser.ConvexpolygonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_convexpolygon)
        self._la = 0  # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 49
                self.match(ConvexPolygonParser.T__0)

                self.state = 50
                self.vertex()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 51
                    self.match(ConvexPolygonParser.SPACE)
                    self.state = 52
                    self.match(ConvexPolygonParser.SPACE)
                    self.state = 53
                    self.vertex()
                    self.state = 56
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == ConvexPolygonParser.SPACE):
                        break

                self.state = 58
                self.match(ConvexPolygonParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(ConvexPolygonParser.T__0)
                self.state = 61
                self.vertex()
                self.state = 62
                self.match(ConvexPolygonParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AsignmentContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConvexPolygonParser.ID, 0)

        def SPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.SPACE)
            else:
                return self.getToken(ConvexPolygonParser.SPACE, i)

        def EQUAL(self):
            return self.getToken(ConvexPolygonParser.EQUAL, 0)

        def convexpolygon(self):
            return self.getTypedRuleContext(ConvexPolygonParser.ConvexpolygonContext, 0)

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_asignment

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAsignment"):
                return visitor.visitAsignment(self)
            else:
                return visitor.visitChildren(self)

    def asignment(self):

        localctx = ConvexPolygonParser.AsignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignment)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(ConvexPolygonParser.ID)
                self.state = 67
                self.match(ConvexPolygonParser.SPACE)
                self.state = 68
                self.match(ConvexPolygonParser.EQUAL)
                self.state = 69
                self.match(ConvexPolygonParser.SPACE)
                self.state = 70
                self.convexpolygon()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(ConvexPolygonParser.ID)
                self.state = 72
                self.match(ConvexPolygonParser.SPACE)
                self.state = 73
                self.match(ConvexPolygonParser.EQUAL)
                self.state = 74
                self.match(ConvexPolygonParser.SPACE)
                self.state = 75
                self.operator(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColorContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ConvexPolygonParser.ID, 0)

        def COMA(self):
            return self.getToken(ConvexPolygonParser.COMA, 0)

        def SPACE(self):
            return self.getToken(ConvexPolygonParser.SPACE, 0)

        def rgb(self):
            return self.getTypedRuleContext(ConvexPolygonParser.RgbContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_color

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitColor"):
                return visitor.visitColor(self)
            else:
                return visitor.visitChildren(self)

    def color(self):

        localctx = ConvexPolygonParser.ColorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_color)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(ConvexPolygonParser.T__2)
            self.state = 79
            self.match(ConvexPolygonParser.ID)
            self.state = 80
            self.match(ConvexPolygonParser.COMA)
            self.state = 81
            self.match(ConvexPolygonParser.SPACE)
            self.state = 82
            self.rgb()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RgbContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REAL(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.REAL)
            else:
                return self.getToken(ConvexPolygonParser.REAL, i)

        def SPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.SPACE)
            else:
                return self.getToken(ConvexPolygonParser.SPACE, i)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_rgb

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRgb"):
                return visitor.visitRgb(self)
            else:
                return visitor.visitChildren(self)

    def rgb(self):

        localctx = ConvexPolygonParser.RgbContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_rgb)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(ConvexPolygonParser.T__3)
            self.state = 85
            self.match(ConvexPolygonParser.REAL)
            self.state = 86
            self.match(ConvexPolygonParser.SPACE)
            self.state = 87
            self.match(ConvexPolygonParser.REAL)
            self.state = 88
            self.match(ConvexPolygonParser.SPACE)
            self.state = 89
            self.match(ConvexPolygonParser.REAL)
            self.state = 90
            self.match(ConvexPolygonParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MyprintContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def TEXT(self):
            return self.getToken(ConvexPolygonParser.TEXT, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_myprint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitMyprint"):
                return visitor.visitMyprint(self)
            else:
                return visitor.visitChildren(self)

    def myprint(self):

        localctx = ConvexPolygonParser.MyprintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_myprint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(ConvexPolygonParser.T__5)
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ConvexPolygonParser.T__0, ConvexPolygonParser.T__14, ConvexPolygonParser.T__18,
                         ConvexPolygonParser.T__19, ConvexPolygonParser.ID]:
                self.state = 93
                self.operator(0)
                pass
            elif token in [ConvexPolygonParser.TEXT]:
                self.state = 94
                self.match(ConvexPolygonParser.TEXT)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AreaContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_area

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArea"):
                return visitor.visitArea(self)
            else:
                return visitor.visitChildren(self)

    def area(self):

        localctx = ConvexPolygonParser.AreaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_area)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ConvexPolygonParser.T__6)
            self.state = 98
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PerimeterContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_perimeter

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPerimeter"):
                return visitor.visitPerimeter(self)
            else:
                return visitor.visitChildren(self)

    def perimeter(self):

        localctx = ConvexPolygonParser.PerimeterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_perimeter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(ConvexPolygonParser.T__7)
            self.state = 101
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VerticesContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_vertices

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVertices"):
                return visitor.visitVertices(self)
            else:
                return visitor.visitChildren(self)

    def vertices(self):

        localctx = ConvexPolygonParser.VerticesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_vertices)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(ConvexPolygonParser.T__8)
            self.state = 104
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CentroidContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self):
            return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_centroid

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCentroid"):
                return visitor.visitCentroid(self)
            else:
                return visitor.visitChildren(self)

    def centroid(self):

        localctx = ConvexPolygonParser.CentroidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_centroid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ConvexPolygonParser.T__9)
            self.state = 107
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InsideContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ConvexPolygonParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, i)

        def COMA(self):
            return self.getToken(ConvexPolygonParser.COMA, 0)

        def SPACE(self):
            return self.getToken(ConvexPolygonParser.SPACE, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_inside

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInside"):
                return visitor.visitInside(self)
            else:
                return visitor.visitChildren(self)

    def inside(self):

        localctx = ConvexPolygonParser.InsideContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_inside)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(ConvexPolygonParser.T__10)
            self.state = 110
            self.operator(0)
            self.state = 111
            self.match(ConvexPolygonParser.COMA)
            self.state = 112
            self.match(ConvexPolygonParser.SPACE)
            self.state = 113
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EqualContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ConvexPolygonParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, i)

        def COMA(self):
            return self.getToken(ConvexPolygonParser.COMA, 0)

        def SPACE(self):
            return self.getToken(ConvexPolygonParser.SPACE, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_equal

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEqual"):
                return visitor.visitEqual(self)
            else:
                return visitor.visitChildren(self)

    def equal(self):

        localctx = ConvexPolygonParser.EqualContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_equal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(ConvexPolygonParser.T__11)
            self.state = 116
            self.operator(0)
            self.state = 117
            self.match(ConvexPolygonParser.COMA)
            self.state = 118
            self.match(ConvexPolygonParser.SPACE)
            self.state = 119
            self.operator(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DrawContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FILENAME(self):
            return self.getToken(ConvexPolygonParser.FILENAME, 0)

        def COMA(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.COMA)
            else:
                return self.getToken(ConvexPolygonParser.COMA, i)

        def SPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ConvexPolygonParser.SPACE)
            else:
                return self.getToken(ConvexPolygonParser.SPACE, i)

        def operator(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ConvexPolygonParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, i)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_draw

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDraw"):
                return visitor.visitDraw(self)
            else:
                return visitor.visitChildren(self)

    def draw(self):

        localctx = ConvexPolygonParser.DrawContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_draw)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ConvexPolygonParser.T__12)
            self.state = 122
            self.match(ConvexPolygonParser.T__13)
            self.state = 123
            self.match(ConvexPolygonParser.FILENAME)
            self.state = 124
            self.match(ConvexPolygonParser.T__13)
            self.state = 125
            self.match(ConvexPolygonParser.COMA)
            self.state = 126
            self.match(ConvexPolygonParser.SPACE)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
            if la_ == 1:
                self.state = 127
                self.operator(0)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 128
                    self.match(ConvexPolygonParser.COMA)
                    self.state = 129
                    self.match(ConvexPolygonParser.SPACE)
                    self.state = 130
                    self.operator(0)
                    self.state = 133
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la == ConvexPolygonParser.COMA):
                        break

                pass

            elif la_ == 2:
                self.state = 135
                self.operator(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorContext(ParserRuleContext):

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operator(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ConvexPolygonParser.OperatorContext)
            else:
                return self.getTypedRuleContext(ConvexPolygonParser.OperatorContext, i)

        def REAL(self):
            return self.getToken(ConvexPolygonParser.REAL, 0)

        def convexpolygon(self):
            return self.getTypedRuleContext(ConvexPolygonParser.ConvexpolygonContext, 0)

        def ID(self):
            return self.getToken(ConvexPolygonParser.ID, 0)

        def getRuleIndex(self):
            return ConvexPolygonParser.RULE_operator

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOperator"):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)

    def operator(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ConvexPolygonParser.OperatorContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 28
        self.enterRecursionRule(localctx, 28, self.RULE_operator, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [ConvexPolygonParser.T__14]:
                self.state = 139
                self.match(ConvexPolygonParser.T__14)
                self.state = 140
                self.operator(0)
                self.state = 141
                self.match(ConvexPolygonParser.T__15)
                pass
            elif token in [ConvexPolygonParser.T__18]:
                self.state = 143
                self.match(ConvexPolygonParser.T__18)
                self.state = 144
                self.operator(4)
                pass
            elif token in [ConvexPolygonParser.T__19]:
                self.state = 145
                self.match(ConvexPolygonParser.T__19)
                self.state = 146
                self.match(ConvexPolygonParser.REAL)
                pass
            elif token in [ConvexPolygonParser.T__0]:
                self.state = 147
                self.convexpolygon()
                pass
            elif token in [ConvexPolygonParser.ID]:
                self.state = 148
                self.match(ConvexPolygonParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 159
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 9, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 157
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
                    if la_ == 1:
                        localctx = ConvexPolygonParser.OperatorContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operator)
                        self.state = 151
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 152
                        self.match(ConvexPolygonParser.T__16)
                        self.state = 153
                        self.operator(7)
                        pass

                    elif la_ == 2:
                        localctx = ConvexPolygonParser.OperatorContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operator)
                        self.state = 154
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 155
                        self.match(ConvexPolygonParser.T__17)
                        self.state = 156
                        self.operator(6)
                        pass

                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 9, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    def sempred(self, localctx: RuleContext, ruleIndex: int, predIndex: int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[14] = self.operator_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def operator_sempred(self, localctx: OperatorContext, predIndex: int):
        if predIndex == 0:
            return self.precpred(self._ctx, 6)

        if predIndex == 1:
            return self.precpred(self._ctx, 5)
